# Simple-CNN-for-MNIST-RISCV_LowRisc

./: .gitignore  CMakeLists.txt  README.md  cnn.c  main.c
src/: CMakeLists.txt
src/mnist_cnn/: CMakeLists.txt  cnn.c  main.c  mnist_data.h
